# SimplePong

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: dummy.txt
src/: main.cpp
src/Ball/: Ball.cpp  Ball.hpp
src/Collider/: Collider.cpp  Collider.hpp
src/Commons/: Commons.cpp  Commons.hpp
src/PTexture/: PTexture.cpp  PTexture.hpp
src/Paddle/: Paddle.cpp  Paddle.hpp
src/TextField/: TextField.cpp  TextField.hpp
src/Texture/: Texture.cpp  Texture.hpp
src/Timer/: Timer.cpp  Timer.h  Timer.hpp
src/Utils/: TextFormat.hpp
src/Vectors/Vector2d/: Vector2d.hpp
src/pTexture/: pTexture.cpp  pTexture.hpp
